monticore-grammar/src/test/resources/de/monticore/javalight/cocos/invalid/A0821/A0821a.java
/* (c) https://github.com/MontiCore/monticore */
public const1(int i, String... i) {}
